<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menus"
        android:checkableBehavior="single">

        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_account"
            android:title="@string/accounts"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/collections"
            android:icon="@drawable/ic_collections"
            android:title="@string/collections"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/acc_conf"
            android:icon="@drawable/ic_customer_confirmation"
            android:title="@string/customer_confirmation"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/hard_core"
            android:icon="@drawable/ic_hard_core"
            android:title="@string/hard_core"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/refer_a_friend"
            android:icon="@drawable/ic_refer_a_friend"
            android:title="@string/refer_a_friend"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/customerEngagement"
        android:icon="@drawable/ic_message"
        android:visible="true"
        android:title="@string/customer_engagement"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/cus_engagement_dropdown"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/levels"
                    android:icon="@drawable/ic_levels"
                    android:title="@string/by_levels"
                    app:showAsAction="ifRoom" />
                <item android:icon="@drawable/ic_baseline_currency_exchange_24"
                    android:id="@+id/transaction"
                    android:title="@string/by_transaction"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>

    </item>

    <group android:id="@+id/logout">
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
    </group>
</menu>