<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.posCollection.Nqr">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_90dp"
            android:background="@drawable/edited_top_bar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_back_icon"
                app:layout_constraintBottom_toBottomOf="@+id/pageTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pageTitle" />

            <TextView
                android:id="@+id/backText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/back"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/backArrow"
                app:layout_constraintStart_toEndOf="@+id/backArrow"
                app:layout_constraintTop_toTopOf="@+id/backArrow" />

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/nqr"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toEndOf="@+id/backText"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share"
                android:layout_marginEnd="@dimen/dimen_30dp"
                app:layout_constraintBottom_toBottomOf="@+id/pageTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/pageTitle"
                app:layout_constraintTop_toTopOf="@+id/pageTitle"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/user_name"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/lekanColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/subHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textColor="@color/lekanColor"
            android:text="@string/share_and_download_merchant_qr_code"
            app:layout_constraintEnd_toEndOf="@+id/customerName"
            app:layout_constraintStart_toStartOf="@+id/customerName"
            app:layout_constraintTop_toBottomOf="@+id/customerName" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/scan_barcode"
            android:src="@drawable/bar_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:src="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:contentDescription="@string/icon_to_download" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_qr_code"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textColor="@color/lekanColor"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>