<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_20dp"
        tools:context=".ui.referAFriend.ReferAFriendLandingPage">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/ic_android_studio_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading"
            style="@style/headingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_40dp"
            android:text="@string/refer_a_friend"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />

        <TextView
            android:id="@+id/getReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/getReward"
            android:textColor="@color/new_main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:contentDescription="@string/pageImage"
            android:src="@drawable/refer_a_frend"
            app:layout_constraintEnd_toEndOf="@+id/getReward"
            app:layout_constraintStart_toStartOf="@+id/getReward"
            app:layout_constraintTop_toBottomOf="@+id/getReward" />

        <TextView
            android:id="@+id/getPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/getPoint"
            android:textAlignment="center"
            android:textColor="@color/new_main_color"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <android.widget.Button
            android:id="@+id/referAFriendBtn"
            style="@style/referBtn"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@drawable/refer_a_friend_btn_bg"
            android:text="@string/refer_a_friend"
            app:layout_constraintEnd_toEndOf="@+id/getPoint"
            app:layout_constraintStart_toStartOf="@+id/getPoint"
            app:layout_constraintTop_toBottomOf="@+id/getPoint" />

        <android.widget.Button
            android:id="@+id/referAFriendWithGift"
            style="@style/referBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_25dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:background="@drawable/refer_a_friend_btn_bg"
            android:text="@string/referWithGift"
            app:layout_constraintEnd_toEndOf="@+id/getPoint"
            app:layout_constraintStart_toStartOf="@+id/getPoint"
            app:layout_constraintTop_toBottomOf="@+id/referAFriendBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>